--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <main class="container-main">
         <section class="cards">
-            <ul>
+            <ul id="ul-produtos">
                 <!-- <li>
                     <img src="img/camiseta_preta.svg" alt="camiseta_preta">
-                    <button>Camisetas</button>
+                    <p>Camisetas</p>
                     <h2>Lightweight Jacket</h2>
                     <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
                     <h3>R$ 100,00</h3>
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                     <img src="img/camiseta_preta.svg" alt="camiseta_preta">
-                    <button>Camisetas</button>
+                    <p>Camisetas</p>
                     <h2>Lightweight Jacket</h2>
                     <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
                     <h3>R$ 100,00</h3>
@@ -46,7 +46,7 @@
                 </li>
                 <li>
                     <img src="img/camiseta_preta.svg" alt="camiseta_preta">
-                    <button>Camisetas</button>
+                    <p>Camisetas</p>
                     <h2>Lightweight Jacket</h2>
                     <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
                     <h3>R$ 100,00</h3>
@@ -71,6 +71,8 @@
             </section>
         </aside>
     </main>
+    <script src="js/database.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
