--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 
         <aside>
             <section class="busca">
-                <input type="text" placeholder="Digite aqui sua pesquisa">
-                <button>Buscar</button>
+                <!-- <input type="text" placeholder="Digite aqui sua pesquisa">
+                <button>Buscar</button> -->
             </section>
             <section class="carrinho">
-                <header>
+                <!-- <header>
                     <h3>Carrinho de compras</h3>
                 </header>
                 <main>
                     <h2>Carrinho vazio</h2>
                     <p>Adicione itens</p>
-                </main>
+                </main> -->
             </section>
         </aside>
     </main>
