--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="container-header">
         <section class="section-header">
-            <h1>Weartake</h1>
+            <!-- <h1>Weartake</h1>
             <nav>
                 <ul>
                     <li>Todos</li>
@@ -21,7 +21,7 @@
                     <li>Calçados</li>
                     <li>Camisetas</li>
                 </ul>
-            </nav>
+            </nav> -->
         </section>
     </header>
 
@@ -29,12 +29,16 @@
         <section class="cards">
             <ul id="ul-produtos">
                 <!-- <li>
-                    <img src="img/camiseta_preta.svg" alt="camiseta_preta">
-                    <p>Camisetas</p>
-                    <h2>Lightweight Jacket</h2>
-                    <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
-                    <h3>R$ 100,00</h3>
-                    <button>Adicionar ao carrinho</button>
+                    <figure>
+                        <img src="img/camiseta_preta.svg" alt="camiseta_preta">
+                    </figure>
+                    <nav>
+                        <p>Camisetas</p>
+                        <h2>Lightweight Jacket</h2>
+                        <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
+                        <h3>R$ 100,00</h3>
+                        <button>Adicionar ao carrinho</button>
+                    </nav>
                 </li>
                 <li>
                     <img src="img/camiseta_preta.svg" alt="camiseta_preta">
