--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
     </main>
     <script src="js/database.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/cards.js"></script>
+    <script src="js/carrinho.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/pesquisa.js"></script>
 </body>
 
 </html>
