--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
 <body>
     <header class="container-header">
         <section class="section-header">
-            <!-- <h1>Weartake</h1>
+            <h1>Weartake</h1>
             <nav>
                 <ul>
-                    <li>Todos</li>
-                    <li>Acessórios</li>
-                    <li>Calçados</li>
-                    <li>Camisetas</li>
+                    <!-- <li>
+                        <button>Todos</button>
+                    </li>
+                    <li>
+                        <button>Acessórios</button>
+                    </li>
+                    <li>
+                        <button>Calçados</button>
+                    </li>
+                    <li>
+                        <button>Camisetas</button>
+                    </li> -->
                 </ul>
-            </nav> -->
+            </nav>
         </section>
     </header>
 
@@ -77,10 +85,9 @@
     </main>
     <script src="js/database.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/cards.js"></script>
-    <script src="js/carrinho.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/pesquisa.js"></script>
+
+
 </body>
 
 </html>
