--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Weartake</title>
 </head>
 
@@ -73,20 +76,18 @@
                 <button>Buscar</button> -->
             </section>
             <section class="carrinho">
-                <!-- <header>
+                <header>
                     <h3>Carrinho de compras</h3>
                 </header>
-                <main>
-                    <h2>Carrinho vazio</h2>
-                    <p>Adicione itens</p>
-                </main> -->
+                <main class="main-carrinho">
+                    <!-- <h2>Carrinho vazio</h2>
+                    <p>Adicione itens</p> -->
+                </main> 
             </section>
         </aside>
     </main>
     <script src="js/database.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/header.js"></script>
-
 
 </body>
 
