--- a/index.html
+++ b/index.html
@@ -51,22 +51,7 @@
                         <button>Adicionar ao carrinho</button>
                     </nav>
                 </li>
-                <li>
-                    <img src="img/camiseta_preta.svg" alt="camiseta_preta">
-                    <p>Camisetas</p>
-                    <h2>Lightweight Jacket</h2>
-                    <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
-                    <h3>R$ 100,00</h3>
-                    <button>Adicionar ao carrinho</button>
-                </li>
-                <li>
-                    <img src="img/camiseta_preta.svg" alt="camiseta_preta">
-                    <p>Camisetas</p>
-                    <h2>Lightweight Jacket</h2>
-                    <p>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</p>
-                    <h3>R$ 100,00</h3>
-                    <button>Adicionar ao carrinho</button>
-                </li> -->
+               -->
             </ul>
         </section>
 
@@ -80,10 +65,17 @@
                     <h3>Carrinho de compras</h3>
                 </header>
                 <main class="main-carrinho">
-                    <!-- <h2>Carrinho vazio</h2>
-                    <p>Adicione itens</p> -->
-                </main> 
+                    <h2>Carrinho vazio</h2>
+                    <p>Adicione itens</p>
+
+                    <!-- ou -->
+                    <!--  -->
+                </main>
+                <!-- <footer class="carrinho-total">
+                    <h4>Quantidade</h4>
+                </footer> -->
             </section>
+        
         </aside>
     </main>
     <script src="js/database.js"></script>
@@ -92,3 +84,6 @@
 </body>
 
 </html>
+
+
+<!-- Posicionar eemntos no carrinho -->
